<resources>
    <string name="app_name">Simple Calculator</string>
    <string name="clear_button">C</string>
    <string name="backspace">DEL</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="subtract_button">-</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="division_button">/</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="multiply_button">x</string>
    <string name="number_zero">0</string>
    <string name="decimal_point">.</string>
    <string name="equal_sign">=</string>
    <string name="add_button">+</string>
</resources>
